Bug 111626 - EDITING: The complete underline color will change, when changing the font color for a specific part
Summary: EDITING: The complete underline color will change, when changing the font col...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0,
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-08-10 08:29 UTC by Telesto
Modified: 2019-05-15 09:33 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file (8.15 KB, application/vnd.oasis.opendocument.text)
2017-08-10 08:29 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2017-08-10 08:29:13 UTC
Description:
EDITING: The complete underline color will change, when changing the font color for a specific part

Steps to Reproduce:
1. Open the attached file
2. Select "Hello" 
3. Changing the font color for hello
4. Notice that the underlining will change color - even for 'World'

Actual Results:  
The partly font color change, has an impact on the fully underlining

Expected Results:
The underlining color change should be restricted to the selection


Reproducible: Always

User Profile Reset: No

Additional Info:
Found in
Version: 6.0.0.0.alpha0+
Build ID: 386fcf9be786b302cd2c6f85ff6d8d97a6777926
CPU threads: 4; OS: Windows 6.19; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-08-06_01:57:50
Locale: nl-NL (nl_NL); Calc: CL

and in
LibO 5.3.3.1

but not in
Versie: 5.2.4.2 
Build ID: 3d5603e1122f0f102b62521720ab13a38a4e0eb0
CPU Threads: 4; Versie besturingssysteem:Windows 6.2; UI Render: standaard; 
Locale: nl-NL (nl_NL); Calc: CL


User-Agent: Mozilla/5.0 (Windows NT 6.2; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Comment 1 Telesto 2017-08-10 08:29:30 UTC
Created attachment 135398 [details]
Example file
Comment 2 Jacques Guilleron 2017-08-10 12:25:29 UTC
Hi Telesto,

Reproduced with
LO  5.3.0.0.alpha1 Build ID: f4ca1573fcf445164c068c1046ab5d084e1b005f
Threads CPU : 2; Version de l'OS :Windows 6.1; UI Render : par défaut; 
Locale : fr-FR (fr_FR); Calc: CL
and upper versions,
but not with
LO 5.2.6.2 Build ID: a3100ed2409ebf1c212f5048fbe377c281438fdc
Threads CPU : 2; Version de l'OS :Windows 6.1; UI Render : par défaut; 
Locale : fr-FR (fr_FR); Calc: CL
Comment 3 raal 2017-08-12 08:10:09 UTC
This seems to have begun at the below commit.
Adding Cc: to Mark Hung; Could you possibly take a look at this one? Thanks
 9bcffaf454096380331fe036805c378e0ca05b77 is the first bad commit
commit 9bcffaf454096380331fe036805c378e0ca05b77
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Sun Sep 18 01:50:33 2016 -0700

    source eb8217e17e09613ab1af43a89b52f04e7cb781e8

author	Mark Hung <marklh9@gmail.com>	2016-08-02 23:25:50 (GMT)
committer	Mark Hung <marklh9@gmail.com>	2016-09-18 08:43:54 (GMT)
commit eb8217e17e09613ab1af43a89b52f04e7cb781e8 (patch)
tree c7f5187285d6af45ed73555f6dc99ca7aeb79e6f
parent 3287bc2f91438085b7604773d5e0346fc3c3f452 (diff)
tdf#80724 try to reuse calculated underline font as much as possible.
Underline was broken because for every portion it calculate a
new underline font based on the following portion so that the
portions do not have consistent underline fonts. And worse the
last portion is never be treated as part of continuous underline.
Comment 4 Mark Hung 2017-08-12 16:23:06 UTC
It's affected by the underline color 'auto'. A quick solution is to use specific color instead of the auto one.
Comment 5 Commit Notification 2017-08-21 14:05:53 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd65bae41c52c4d2f40589776a645e224ee222cd

tdf#111626 switch underline color.

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Telesto 2017-09-12 18:25:32 UTC
No repro with:
Version: 6.0.0.0.alpha0+
Build ID: 75ca51725274b95417aa2c7f169145e3cd3b3b4f
CPU threads: 4; OS: Windows 6.29; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-09-12_03:59:49
Locale: nl-NL (nl_NL); Calc: CL

Thanks for the fix!
Comment 7 Xisco Faulí 2017-09-13 09:36:40 UTC
Moving to VERIFIED FIXED based on comment 6