tdf#111626 break underline if underline (auto)color are different.

Check the font color if the underline color is auto, and break
the underline if it is different from the current underline color.

Change-Id: I81a0e100cd024add603b574f07e10b5e3a785d0b